# RabBit

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  RabBit.sln  nuget.config
.github/workflows/: BuildAndTest.yml  Debug.yml  Distribution.yml  Release.yml  cmake.yml
.github/workflows/BuildAndTests/: Debug.yml  Distribution.yml
App/: App.vcxproj
App/src/: App.cpp
Core/: CMakeLists.txt  Game.h
Core/shaderCompiler/d3d12/: CMakeLists.txt
Core/shaderCompiler/d3d12/src/: Compiler.cpp  Compiler.h  Main.cpp  Shader.h  ShaderWriter.cpp  ShaderWriter.h  Utils.cpp  Utils.h
Core/src/: RabBit.h
Core/src/RabBit/: Core.h  EntryPoint.h  RabBitCommon.cpp  RabBitCommon.h  RabBitPch.cpp  RabBitPch.h  TempWindow.cpp  TempWindow.h
Core/src/RabBit/app/: Application.cpp  Application.h  ApplicationLayer.cpp  ApplicationLayer.h  AssetManager.cpp  AssetManager.h  FrameAllocator.cpp  FrameAllocator.h  Settings.cpp  Settings.h
Core/src/RabBit/entity/: ComponentRegister.cpp  ComponentRegister.h  GameObject.cpp  GameObject.h  ObjectComponent.cpp  ObjectComponent.h  Scene.cpp  Scene.h
Core/src/RabBit/entity/components/: Camera.h  Light.h  Mesh.cpp  Mesh.h  Transform.h
Core/src/RabBit/events/: ApplicationEvent.h  Event.cpp  Event.h  KeyEvent.h  MouseEvent.h  WindowEvent.h
Core/src/RabBit/events/input/: Input.cpp  Input.h  KeyCodes.h  MouseCodes.h
Core/src/RabBit/graphics/: AssetManager.cpp  AssetManager.h  CommandList.cpp  CommandList.h  CommandQueue.cpp  CommandQueue.h  Display.cpp  Display.h  Frustum.cpp  Frustum.h  GraphicsDevice.cpp  GraphicsDevice.h  NativeWindow.cpp  NativeWindow.h  RenderGraph.cpp  RenderGraph.h  RenderGraphContext.cpp  RenderGraphContext.h  RenderInterface.cpp  RenderInterface.h  RenderPass.cpp  RenderPass.h  RenderResource.cpp  RenderResource.h  Renderer.cpp  Renderer.h  RendererPlan.h  ResourceDefaults.cpp  ResourceDefaults.h  ResourceState.h  ResourceStreamer.cpp  ResourceStreamer.h  ShaderSystem.cpp  ShaderSystem.h  View.cpp  View.h  ViewContext.cpp  ViewContext.h  Window.cpp  Window.h
Core/src/RabBit/graphics/d3d12/: CommandList.cpp  CommandList.h  DeviceQueue.cpp  DeviceQueue.h  GraphicsDevice.cpp  GraphicsDevice.h  Pipeline.cpp  Pipeline.h  RenderInterfaceD3D12.cpp  RenderInterfaceD3D12.h  RendererD3D12.cpp  RendererD3D12.h  ShaderSystem.cpp  ShaderSystem.h  ShaderSystemD3D12.cpp  UtilsD3D12.h
Core/src/RabBit/graphics/d3d12/descriptors/: DescriptorAllocation.cpp  DescriptorAllocation.h  DynamicDescriptorHeap.h  DynamicGpuDescriptorHeap.cpp  DynamicGpuDescriptorHeap.h
Core/src/RabBit/graphics/d3d12/pipeline/: Pipeline.cpp  Pipeline.h
Core/src/RabBit/graphics/d3d12/resource/: BindlessDescriptorHeap.cpp  BindlessDescriptorHeap.h  Buffer.cpp  Buffer.h  Descriptor.cpp  Descriptor.h  DescriptorHeap.cpp  DescriptorHeap.h  DescriptorManager.cpp  DescriptorManager.h  GpuResource.cpp  GpuResource.h  RenderResourceD3D12.cpp  RenderResourceD3D12.h  Resource.cpp  Resource.h  ResourceManager.cpp  ResourceManager.h  ResourceStateManager.cpp  ResourceStateManager.h  UploadAllocator.cpp  UploadAllocator.h
Core/src/RabBit/graphics/d3d12/shaders/: ShaderDefines.h  ShaderSystem.cpp  ShaderSystem.h  ShaderSystemD3D12.h  test.hlsl
Core/src/RabBit/graphics/d3d12/shaders/shared/: Common.h  test2.h
Core/src/RabBit/graphics/d3d12/shaders/src/: test.hlsl  test2.hlsl
Core/src/RabBit/graphics/d3d12/window/: DisplayD3D12.cpp  DisplayD3D12.h  NativeWindow.cpp  NativeWindow.h  SwapChain.cpp  SwapChain.h  WindowD3D12.cpp  WindowD3D12.h
Core/src/RabBit/graphics/native/: Buffer.cpp  Buffer.h  CommandList.cpp  CommandList.h  CommandQueue.cpp  CommandQueue.h  DeviceEngine.cpp  DeviceEngine.h  DeviceQueue.cpp  DeviceQueue.h  GpuEngine.cpp  GpuEngine.h  GraphicsDevice.cpp  GraphicsDevice.h  GraphicsDeviceContext.h  GraphicsDeviceEngine.cpp  GraphicsDeviceEngine.h  Resource.cpp  Resource.h  ResourceManager.cpp  ResourceManager.h  ResourceStateManager.cpp  ResourceStateManager.h
Core/src/RabBit/graphics/native/pipeline/: Pipeline.cpp  Pipeline.h
Core/src/RabBit/graphics/native/resource/: Buffer.cpp  Buffer.h  Resource.cpp  Resource.h  ResourceManager.cpp  ResourceManager.h  ResourceStateManager.cpp  ResourceStateManager.h
Core/src/RabBit/graphics/native/window/: NativeWindow.cpp  NativeWindow.h  SwapChain.cpp  SwapChain.h
Core/src/RabBit/graphics/passes/: ApplyLighting.cpp  ApplyLighting.h  DeferredLighting.cpp  DeferredLighting.h  GBuffer.cpp  GBuffer.h  Streamer.cpp  Streamer.h
Core/src/RabBit/graphics/shaders/shared/: Common.h  ConstantBuffers.h
Core/src/RabBit/graphics/shaders/src/: ApplyLighting.hlsl  GBuffer.h  Geometry.hlsl  Lighting.h  Present.hlsl  Transform.h  test.hlsl
Core/src/RabBit/graphics/window/: NativeWindow.cpp  NativeWindow.h  SwapChain.cpp  SwapChain.h
Core/src/RabBit/input/: Input.cpp  Input.h  KeyCodes.h  MouseCodes.h
Core/src/RabBit/input/events/: ApplicationEvent.h  Event.cpp  Event.h  KeyEvent.h  MouseEvent.h  WindowEvent.h
Core/src/RabBit/math/: Matrix.cpp  Matrix.h  Misc.cpp  Misc.h  Vec.cpp  Vec.h  Vector.cpp  Vector.h
Core/src/RabBit/utils/: Container.h  File.cpp  File.h  GPtr.h  Helper.cpp  Helper.h  Macro.h  Memory.h  Ptr.h  String.cpp  String.h  Threading.cpp  Threading.h  Util.cpp  Util.h
Core/src/RabBit/utils/debug/: Assert.h  Log.cpp  Log.h  Profile.h
Core/src/RabBit/utils/math/: Mat.h  Vec.cpp  Vec.h
Core/tests/: CMakeLists.txt
Core/tests/src/: EntryPoint.cpp  Math.cpp  Threads.cpp
Core/tests/src/math/: Math.cpp
Core/tests/src/threading/: threads.cpp
Core/tests/src/utils/: Math.cpp
EngineTest/: EngineTest.vcxproj  EngineTest.vcxproj.filters
EngineTest/test/utils/: Math.cpp
EngineTest/x64/Debug/: vc142.idb
EngineTest/x64/Debug/EngineTest.tlog/: CL.command.1.tlog  (+3 more)
RabBit Engine/: Game.cpp  Game.h  Main.cpp  RabBit Engine.vcxproj  RabBit Engine.vcxproj.filters  RabBitPch.cpp  resource.aps
RabBit Engine/src/: RabBit.h
RabBit Engine/src/RabBit/: Core.h  EntryPoint.h  RabBitPch.h  TempWindow.cpp  TempWindow.h
Sample/: CMakeLists.txt
Sample/src/: App.cpp  TestLayer.h
(+6 files in other folders)
